force-app/main/default/objects/Account/fields/Not_Interested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reason__c</fullName>
    <label>Not Interested Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Not_Interested_Reason</valueSetName>
    </valueSet>
</CustomField>