force-app/main/default/objects/Account/fields/Parent_Account_Custom__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account (Custom)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Accounts</relationshipLabel>
    <relationshipName>ChildAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>