force-app/main/default/objects/Account/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payments</label>
    <referenceTo>Payments__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>