force-app/main/default/objects/Account/fields/Price_Per_Cover__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Cover__c</fullName>
    <label>Price Per Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>