force-app/main/default/objects/Account/fields/Qualified_for_Aros_by__c.field-meta.xml
<CustomField>
    <fullName>Qualified_for_Aros_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualified for Aros by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>