force-app/main/default/objects/Account/fields/Realistic_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Realistic_Capacity__c</fullName>
    <label>Realistic Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>