force-app/main/default/objects/Account/fields/Reference_Given__c.field-meta.xml
<CustomField>
    <fullName>Reference_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Given</label>
    <type>Checkbox</type>
</CustomField>