force-app/main/default/objects/Account/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <displayFormat>REF-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Referral ID</label>
    <type>AutoNumber</type>
</CustomField>