force-app/main/default/objects/Account/fields/Related_Host__c.field-meta.xml
<CustomField>
    <fullName>Related_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Host</label>
    <referenceTo>Hosts__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>