force-app/main/default/objects/Account/fields/Related_Host_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Host_ID__c</fullName>
    <formula>Related_Host__r.Host_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Host ID</label>
    <type>Text</type>
</CustomField>