force-app/main/default/objects/Account/fields/Remaining_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Tickets__c</fullName>
    <formula>Tickets_in_order__c - Cancelled_Tickets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>