force-app/main/default/objects/Account/fields/Sales_meeting__c.field-meta.xml
<CustomField>
    <fullName>Sales_meeting__c</fullName>
    <label>Sales meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ring igen</fullName>
            </value>
            <value>
                <fullName>Intro givet</fullName>
            </value>
            <value>
                <fullName>Fællesmøde</fullName>
            </value>
            <value>
                <fullName>Singlemøde</fullName>
            </value>
            <value>
                <fullName>Fysisk møde</fullName>
            </value>
            <value>
                <fullName>Journal udfyldt / Afventer betaling</fullName>
            </value>
            <value>
                <fullName>Tilbud sendt</fullName>
            </value>
            <value>
                <fullName>Ikke kontaktet</fullName>
            </value>
            <value>
                <fullName>Webmøde</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>