force-app/main/default/objects/Account/fields/Sales_value__c.field-meta.xml
<CustomField>
    <fullName>Sales_value__c</fullName>
    <description>Total sales value</description>
    <label>Sales value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>