force-app/main/default/objects/Account/fields/Send_SMS_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Reminders__c</fullName>
    <label>Send SMS Reminders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>