force-app/main/default/objects/Account/fields/Service_call__c.field-meta.xml
<CustomField>
    <fullName>Service_call__c</fullName>
    <label>Service call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service call</fullName>
            </value>
            <value>
                <fullName>Trustpilot follow-up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>