force-app/main/default/objects/Account/fields/Stored_Age__c.field-meta.xml
<CustomField>
    <fullName>Stored_Age__c</fullName>
    <label>Stored Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>