force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <externalId>true</externalId>
    <label>Tax ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>