force-app/main/default/objects/Account/fields/telegenta__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>telegenta__Phone_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone Number</label>
    <referenceTo>telegenta__Phone_Number__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>