force-app/main/default/objects/Account/fields/telegenta__Phone_number_Id__c.field-meta.xml
<CustomField>
    <fullName>telegenta__Phone_number_Id__c</fullName>
    <formula>telegenta__Phone_Number__r.telegenta__NumberId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone number Id</label>
    <type>Text</type>
</CustomField>