force-app/main/default/objects/Account/fields/Testamente_vs_Fremtidsfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>Testamente_vs_Fremtidsfuldmagt__c</fullName>
    <label>Testamente vs. Fremtidsfuldmagt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Only Testamente</fullName>
            </value>
            <value>
                <fullName>Only Fremtidsfuldmagt</fullName>
            </value>
            <value>
                <fullName>Boligoverdragelse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>