force-app/main/default/objects/Account/fields/Text_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Text_Owner_ID__c</fullName>
    <formula>CASESAFEID(OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Owner ID</label>
    <type>Text</type>
</CustomField>