force-app/main/default/objects/Account/fields/Time_of_Manual_Aros_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Manual_Aros_Qualification__c</fullName>
    <label>Time of Manual Aros Qualification</label>
    <type>DateTime</type>
</CustomField>