force-app/main/default/objects/Account/fields/Time_of_Seren_Meeting_Booking__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Seren_Meeting_Booking__c</fullName>
    <label>Time of Seren Meeting Booking</label>
    <type>DateTime</type>
</CustomField>