force-app/main/default/objects/Account/fields/Time_of_ticket_scan__c.field-meta.xml
<CustomField>
    <fullName>Time_of_ticket_scan__c</fullName>
    <label>Time of ticket scan</label>
    <type>DateTime</type>
</CustomField>