force-app/main/default/objects/Account/fields/Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls__c</fullName>
    <label>Total Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>