force-app/main/default/objects/Account/fields/Unqualified_Status__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Status__c</fullName>
    <label>Unqualified Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unqualified_Status</valueSetName>
    </valueSet>
</CustomField>