force-app/main/default/objects/Account/fields/Unsuccessful_Calls__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Calls__c</fullName>
    <label>Unsuccessful Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>