force-app/main/default/objects/Account/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Totalliv</fullName>
            </value>
            <value>
                <fullName>Leadad</fullName>
            </value>
            <value>
                <fullName>PR Leads</fullName>
            </value>
            <value>
                <fullName>Billetto</fullName>
            </value>
            <value>
                <fullName>Tilmeldingsblanket</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Andet</fullName>
            </value>
            <value>
                <fullName>Popermo</fullName>
            </value>
            <value>
                <fullName>Meet the Team</fullName>
            </value>
            <value>
                <fullName>Website Form</fullName>
            </value>
            <value>
                <fullName>Salesforce Screen Flow</fullName>
            </value>
            <value>
                <fullName>1 timmars gratis raadgivning</fullName>
            </value>
            <value>
                <fullName>Findforsikring.dk</fullName>
            </value>
            <value>
                <fullName>Registration Form Invite</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Personal Link</fullName>
            </value>
            <value>
                <fullName>Kundkontakter</fullName>
            </value>
            <value>
                <fullName>Outgrow</fullName>
            </value>
            <value>
                <fullName>Seren</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Gratis raadgivning</fullName>
            </value>
            <value>
                <fullName>Cube</fullName>
            </value>
            <value>
                <fullName>Google-ads</fullName>
            </value>
            <value>
                <fullName>eGentic</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>eGentic/Premio</fullName>
            </value>
            <value>
                <fullName>Contact Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>