force-app/main/default/objects/Account/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <label>UTM Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 procent lookalike af alle leads, gift og samlevende</fullName>
            </value>
            <value>
                <fullName>Pre-booking</fullName>
            </value>
            <value>
                <fullName>PR leads - Gifte m. dine og mine børn</fullName>
            </value>
            <value>
                <fullName>DK - Website Form</fullName>
            </value>
            <value>
                <fullName>dk_gifte_forældre</fullName>
            </value>
            <value>
                <fullName>Gifte m. dine og mine børn</fullName>
            </value>
            <value>
                <fullName>Sambo m. børn</fullName>
            </value>
            <value>
                <fullName>PR Lead Internal Meeting Booking</fullName>
            </value>
            <value>
                <fullName>A1 København + århus + vejle</fullName>
            </value>
            <value>
                <fullName>Juridisk rådgivning - vi ringer til dig med link til kalender</fullName>
            </value>
            <value>
                <fullName>all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>