force-app/main/default/objects/Account/fields/Venue_Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Venue_Rental_Cost__c</fullName>
    <label>Venue Rental Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>