force-app/main/default/objects/Account/fields/Wants_to_Give_Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Give_Gift_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants to Give Gift Card</label>
    <type>Checkbox</type>
</CustomField>