force-app/main/default/objects/Account/fields/Working_Status__c.field-meta.xml
<CustomField>
    <fullName>Working_Status__c</fullName>
    <label>Working Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Working_Status</valueSetName>
    </valueSet>
</CustomField>