force-app/main/default/objects/Account/fields/Year_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Birth__c</fullName>
    <label>Year of Birth</label>
    <length>4</length>
    <type>Text</type>
</CustomField>