force-app/main/default/objects/Account/fields/Zendesk_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_ID__c</fullName>
    <label>Zendesk ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>