force-app/main/default/objects/Account/recordTypes/Easy_Legal_Group.recordType-meta.xml
<RecordType>
    <fullName>Easy_Legal_Group</fullName>
    <active>true</active>
    <label>Easy Legal Group</label>
</RecordType>