force-app/main/default/objects/Account/listViews/Accounts_SE.listView-meta.xml
<ListView>
    <fullName>Accounts_SE</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Sales_value__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>Market_Unit__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>FA_SE</value>
    </filters>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>9/9/2025 12:00 AM</value>
    </filters>
    <label>Accounts SE</label>
</ListView>