force-app/main/default/objects/Account/listViews/Accounts_with_Inactive_Owners.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Inactive_Owners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>Is_member__c</columns>
    <columns>Market_Unit__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Owner_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts with Inactive Owners</label>
</ListView>