force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Sales_value__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Event_m_destatus__pc</columns>
    <columns>Market_Unit__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>