force-app/main/default/objects/Account/listViews/Aros_gold_leads.listView-meta.xml
<ListView>
    <fullName>Aros_gold_leads</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Sales_value__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>Is_member__c</columns>
    <columns>Lead_Publisher_Name__c</columns>
    <columns>Lead_Publisher_Campaign__c</columns>
    <columns>Market_Unit__c</columns>
    <columns>Lead__c</columns>
    <columns>Customer_number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Aros_Lead_Generation_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Aros gold leads</label>
</ListView>