force-app/main/default/objects/Account/listViews/BA24.listView-meta.xml
<ListView>
    <fullName>BA24</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Sales_value__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>PC_LEAD_SOURCE</columns>
    <columns>Lead_Publisher_Name__c</columns>
    <columns>Lead_Publisher_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Publisher_Name__c</field>
        <operation>equals</operation>
        <value>BoligAdvokat24</value>
    </filters>
    <label>BA24</label>
</ListView>