force-app/main/default/objects/Account/listViews/Business_Accounts.listView-meta.xml
<ListView>
    <fullName>Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Market_Unit__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Business Accounts</label>
</ListView>