force-app/main/default/objects/Account/listViews/CC_DK_Customer_Care.listView-meta.xml
<ListView>
    <fullName>CC_DK_Customer_Care</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND (7 OR 8) AND 9</booleanFilter>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Contact_Status__pc</columns>
    <columns>Account_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Number_of_Products__c</columns>
    <columns>New_Status__pc</columns>
    <columns>Working_Status__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK,Testamente_DK</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <filters>
        <field>Contact_Status__pc</field>
        <operation>notEqual</operation>
        <value>Unqualified,Closed</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>notEqual</operation>
        <value>Unqualified,Closed,Inactive</value>
    </filters>
    <filters>
        <field>Last_Contact_State__c</field>
        <operation>notEqual</operation>
        <value>Converted</value>
    </filters>
    <filters>
        <field>Last_Contact_State__pc</field>
        <operation>notEqual</operation>
        <value>Converted</value>
    </filters>
    <filters>
        <field>Call_Campaign__pc</field>
        <operation>equals</operation>
        <value>Denmark: Customer Care (Account)</value>
    </filters>
    <filters>
        <field>Active_Call_Campaigns__pc</field>
        <operation>includes</operation>
        <value>Denmark: Customer Care (Account)</value>
    </filters>
    <filters>
        <field>Communication_Ban__c</field>
        <operation>equals</operation>
    </filters>
    <label>CC - DK: Customer Care</label>
</ListView>